[package]
name = "json-key-remover"
version = "0.1.0"
edition = "2021"
description = "Remove specific keys from json"
authors = ["baku4 <bahkhun@gmail.com>"]
readme = "README.md"
repository = "https://github.com/baku4/json-key-remover/"
license = "MIT"
keywords = ["json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }